--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,59 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  build:
+    executor:
+      name: go/default
+      tag: '1.16'
     steps:
       - checkout
+      # - go/load-cache
+      - go/mod-download
+      # - go/save-cache
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+          name: 'trying to build the backend'
+          command: |
+            pwd
+            ls -la 
+            cd backend
+            go build ./cmd/web/*.go
+            mv ./main/ ..
+            cd .. 
+            ls -la
+      - run:
+          name: move binary to artifact
+          command: |
+            mkdir artifacts
+            mv ~/project/main ~/project/artifacts
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/artifacts
+  configure the server:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/
+      - store_artifacts:
+          path: ~/project/artifacts
+      - run:
+          name: download and run the server on the ec2-instance
+          command: |
+            pwd 
+            cd artifacts
+            ls -ls 
+            cd .. 
+            apk add --update ansible
+            ansible-playbook -vv -i ~/project/.circleci/inventory.txt ~/project/.circleci/ansible/deploy-backend.yml
+orbs:
+  go: circleci/go@1.7.1
+  python: circleci/python@2.1.1
+version: 2.1
 workflows:
-  say-hello-workflow:
+  main:
     jobs:
-      - say-hello
+      - build
+      - configure the server:
+          requires: [build]
+#             # ansible-playbook -vv -i ~/project/.circleci/inventory.txt ~/project/.circleci/ansible/deploy-backend.yml
+# cat ~/project/.circleci/ansible/deploy-backend.yml
