trying the first time to configure the backend binary so it connects to the production DB

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,8 @@ jobs:
             pwd
             ls -la 
             cd backend
-            go build -o server ./cmd/web/*.go --DB_NAME $DB_NAME --DB_PORT $DB_PORT --DB_HOST $DB_HOST --DB_USER $DB_USER --DB_PASSWORD $DB_PASSWORD
+            echo $DB_NAME
+            go build -o server ./cmd/web/*.go --DB_NAME=$DB_NAME --DB_PORT=$DB_PORT --DB_HOST=$DB_HOST --DB_USER=$DB_USER --DB_PASSWORD=$DB_PASSWORD
             ls -la 
             mv ./server ..
             cd .. 
