--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             ls -la 
             cd backend
             echo $DB_NAME
-            go build -o server ./cmd/web/*.go --DB_NAME=$DB_NAME --DB_PORT=$DB_PORT --DB_HOST=$DB_HOST --DB_USER=$DB_USER --DB_PASSWORD=$DB_PASSWORD
+            go build -o server ./cmd/web/*.go 
             ls -la 
             mv ./server ..
             cd .. 
