--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,10 @@ jobs:
             then 
               curl https://kvdb.io/MfuFTtcrnEYNxTz4nHT51E/migrations_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
+      - run:
+          name: 'cat the db_dump file '
+          command: |
+            cd backend 
             cat db_dump.txt
 
   create-infrastructure:
