IaC creation of ec2 & s3 bucket - etc.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,12 +60,18 @@ jobs:
             migrate -version
             cd backend 
             migrate -path=./migrations -database="postgres://$DB_USER:$DB_PASSWORD@$DB_HOST:$DB_PORT/$DB_NAME?sslmode=disable" -verbose up >&1 > db_dump.txt 2>&1 
-            if (grep -q -E -i 'error\|failed\|force' ./db_dump.txt) 
-              then curl https://kvdb.io/MfuFTtcrnEYNxTz4nHT51E/migrations_${CIRCLE_WORKFLOW_ID:0:7} -d '0'
+            if (grep -q -E -i 'error\||failed\||force' ./db_dump.txt) 
+              then 
+              curl https://kvdb.io/MfuFTtcrnEYNxTz4nHT51E/migrations_${CIRCLE_WORKFLOW_ID:0:7} -d '0'
+              fi
             if (grep -q -E -i 'Finished' ./db_dump.txt) 
-            then curl https://kvdb.io/MfuFTtcrnEYNxTz4nHT51E/migrations_${CIRCLE_WORKFLOW_ID:0:7} -d '2'
+              then 
+              curl https://kvdb.io/MfuFTtcrnEYNxTz4nHT51E/migrations_${CIRCLE_WORKFLOW_ID:0:7} -d '2'
+              fi
             if (grep -q -E -i 'no change' ./db_dump.txt)
-            then curl https://kvdb.io/MfuFTtcrnEYNxTz4nHT51E/migrations_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+              then 
+              curl https://kvdb.io/MfuFTtcrnEYNxTz4nHT51E/migrations_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+              fi
       - run:
           name: 'cat the db_dump file '
           command: |
