IaC creation of ec2 & s3 bucket - etc.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,10 +150,10 @@ workflows:
   main:
     jobs:
       - build-backend
-      - run-migrations:
-          requires: [build-backend]
+      # - run-migrations:
+      #     requires: [build-backend]
       - create-infrastructure:
-          requires: [run-migrations]
+          requires: [build-backend]
       - deploy-backend:
           requires: [create-infrastructure]
           # filters:
