--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,7 +136,8 @@ jobs:
             ls -ls 
             cd .. 
             apk add --update ansible
-            ansible-playbook -vv -i ~/project/.circleci/inventory.txt ~/project/.circleci/ansible/deploy-backend.yml
+            cat inventory.txt
+            ansible-playbook -vv -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/deploy-backend.yml
       - destroy-environment
   smoke-test-backend:
     docker:
