IaC creation of ec2 & s3 bucket - etc.

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -4,6 +4,7 @@
   shell: |
     echo $CIRCLE_TOKEN 
     echo $CIRCLE_BUILD_NUM
+    mkdir backend
     cd backend
     curl -H "Circle-Token: $CIRCLE_TOKEN " https://circleci.com/api/v1.1/project/github/jmpberlin/testify/$CIRCLE_BUILD_NUM/artifacts | grep -o 'https://[^"]*' | wget --verbose --header "Circle-Token: $CIRCLE_TOKEN" --input-file -
 - name: chmod the backend
